# helper-streambufs

./: CMakeLists.txt
include/: filebuf.h  nulbuf.h  teebuf.h
tests/: CMakeLists.txt  filebufTests.cpp  nulbufTests.cpp
